--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "discord.js": "^11.2.1",
     "encodeurl": "^1.0.1",
     "get-urls": "^7.2.0",
-    "got": "^8.0.1"
+    "got": "^8.0.1",
+    "swearjar": "^0.2.0"
   }
 }
